--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   url_launcher: ^6.1.8
+  flutter_svg: ^1.1.6
 
 dev_dependencies:
   flutter_test:
@@ -63,6 +64,10 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/perfil.png
+    - assets/icons/github.svg
+    - assets/icons/linkedin.svg
+    - assets/icons/whatsapp.svg
+    - assets/file/curriculum.pdf
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
