--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,7 +67,7 @@ flutter:
     - assets/icons/github.svg
     - assets/icons/linkedin.svg
     - assets/icons/whatsapp.svg
-    - assets/file/curriculum.pdf
+    - assets/files/curriculum-jose-alves.pdf
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
