removido teste github action

--- a/.github/workflows/firebase-hosting.yml
+++ b/.github/workflows/firebase-hosting.yml
@@ -19,7 +19,7 @@ jobs:
           flutter-version: '3.3.9'
           channel: 'stable'
       - run: flutter pub get
-      - run: flutter test
+      # - run: flutter test --platform chrome
       - run: flutter build web
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
