--- a/.github/workflows/firebase-hosting.yml
+++ b/.github/workflows/firebase-hosting.yml
@@ -20,7 +20,8 @@ jobs:
           channel: 'stable'
       - run: flutter pub get
       # - run: flutter test --platform chrome
-      - run: flutter build web --web-renderer html --release
+      # - run: flutter build web --web-renderer html --release
+      - run: flutter build web
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: '${{ secrets.GITHUB_TOKEN }}'
